Solved overflowing within the new AircraftList component and reduced the size of command and response text however making it bold

--- a/ATCclient/atc-client-app/src/App.css
+++ b/ATCclient/atc-client-app/src/App.css
@@ -85,7 +85,7 @@ button:hover {
   border-style: solid;
   width: 18.5vi;
   height: 66vh;
-  font-size: 20px;
+  font-size: 10px;
   padding: 0px;
 }
 
@@ -96,6 +96,7 @@ button:hover {
   border-style: solid;
   width: 18.5vi;
   height: 26.7vh;
+  overflow-y: scroll;
 }
 
 .Input
